fix(favorite): `FavoriteService` 테스트가 새 클래스들을 사용하도록 수정했다.